# HimClimX

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: analyze.py  forecast.py  meta.py  models.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/services/: analysis.py  cache.py  catalog.py  data_loader.py  forecasting.py
backend/docs/: mkdocs.yml
backend/tests/: conftest.py  data_loader_test.py  test_analyze_endpoint.py  test_forecast_endpoint.py  test_meta_endpoints.py  test_models.py
data/climate/: cru_ts4.09.1901.2024.frs.dat_himalaya_subset.nc  cru_ts4.09.1901.2024.pet.dat_himalaya_subset.nc
data/shapefiles/: C2000.dbf  C2000.shp  C2000.shx  C4000.dbf  C4000.shp  C4000.shx  C6000.dbf  C6000.shp  C6000.shx  E2000.dbf  E2000.shp  E2000.shx  E4000.dbf  E4000.shp  E4000.shx  E6000.dbf  E6000.shp  E6000.shx  W2000.dbf  W2000.shp  W2000.shx  W4000.dbf  W4000.shp  W4000.shx  W6000.dbf  W6000.shp  W6000.shx
docs/docs/: api-examples.md  api-overview.md
