[project]
name = "himclimx-backend"
version = "0.1.0"
description = "Backend service for HimClimX climate dashboard"
authors = [
    { name = "AmanDoesntCode", email = "E21CSEU0001@bennett.edu.in" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi >=0.116.2,<0.117.0",
    "uvicorn >=0.35.0,<0.36.0",
    "xarray",
    "pandas",
    "numpy",
    "pydantic",
    "regionmask",
    "plotly",
    "joblib",
    "redis",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "h5netcdf (>=1.6.4,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pyproj (>=3.7.2,<4.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "rioxarray (>=0.19.0,<0.20.0)",
    "prophet (>=1.1.7,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest >=8.4.2,<9.0.0",
    "black >=24.10.0,<25.0.0",
    "isort >=6.0.1,<7.0.0",
    "flake8 >=7.3.0,<8.0.0",
    "mypy",
    "pre-commit",
    "httpx (>=0.28.1,<0.29.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"        # <- makes isort compatible with Black
line_length = 88
combine_as_imports = true
force_single_line = false
